Removed any vulnerable and deprecated dependencies from angular app, fixed main page styles, renamed api packages, optimized imports